--- a/src/public/css/common.css
+++ b/src/public/css/common.css
@@ -204,9 +204,9 @@
         from(rgba(0, 0, 0, 0.7)),
         to(rgba(0, 0, 0, 0.7))
       ),
-      url(img/hero.jpg);
+      url(../img/bg-admin.jpg);
     background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
-      url(img/hero.jpg);
+      url(../img/bg-admin.jpg);
     background-size: cover;
     background-position: center;
     height: 100vh;
@@ -321,6 +321,7 @@
   
   .section-features .long-copy {
     margin-bottom: 40px;
+  
   }
   
   /*------------------------------------*/
@@ -684,3 +685,160 @@
   .text-primary {
 color: #dd4b39;
   }
+
+  .text-title {
+      color: white;
+      font-weight: 500;
+
+  }
+
+  .inline-block {
+      display: inline-block;
+  }
+
+  .inline-element {
+    display: inline-block;
+  }
+
+  .title {
+      display: flex;
+      align-self: center;
+      align-items: center;
+  }
+
+  .center-inline-block {
+    display: flex;
+    align-self: center;
+    align-items: center;
+  }
+
+
+  /* CUSTOMIZED CARD */
+  * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+  
+  body {
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
+      Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  }
+  
+  .heading-container {
+    text-align: center;
+  }
+  
+  .heading {
+    font-weight: 600;
+  }
+  
+  .credit {
+    margin: 10px 0px;
+    color: #888888;
+    font-size: 25px;
+    transition: all 0.5s;
+  }
+  
+  .credit a {
+    color: inherit;
+  }
+  
+  a,
+  .card__exit,
+  .card__icon {
+    position: relative;
+    text-decoration: none;
+    color: rgba(255, 255, 255, 0.9);
+  }
+  
+  a::after {
+    position: absolute;
+    top: 25px;
+    left: 0;
+    content: "";
+    width: 0%;
+    height: 3px;
+    background-color: rgba(255, 255, 255, 0.6);
+    transition: all 0.5s;
+  }
+  
+  a:hover::after {
+    width: 100%;
+  }
+  
+  .main-container {
+    padding: 30px;
+  }
+  
+  .card-container {
+    padding: 16px 32px;
+    display: flex;
+    /* flex-wrap: wrap; */
+    justify-content: space-between;
+  }
+  
+  .card {
+    margin: 20px;
+    padding: 20px;
+    /* width: 500px; */
+    min-height: 200px;
+    display: grid;
+    grid-template-rows: 20px 50px 1fr 50px;
+    border-radius: 10px;
+    box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.25);
+    transition: all 0.5s;
+  }
+  
+  .card:hover {
+    box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.4);
+    transform: scale(1.01);
+  }
+  
+  .card__exit {
+    grid-row: 1/2;
+    justify-self: end;
+  }
+  
+  .card__icon {
+    grid-row: 2/3;
+    font-size: 30px;
+  }
+  
+  .card__title {
+    grid-row: 3/4;
+    font-weight: 400;
+    color: #ffffff;
+  }
+  
+  .card__apply {
+    grid-row: 4/5;
+    align-self: center;
+  }
+  
+  .card-1 {
+    background: radial-gradient(#1fe4f5, #3fbafe);
+  }
+  
+  .card-2 {
+    background: radial-gradient(#fbc1cc, #fa99b2);
+  }
+  
+  .card-3 {
+    background: radial-gradient(#76b2fe, #b69efe);
+  }
+  
+  .card-4 {
+    background: radial-gradient(#60efbc, #58d5c9);
+  }
+  
+  .card-5 {
+    background: radial-gradient(#f588d8, #c0a3e5);
+  }
+  
+  @media (max-width: 1600px) {
+    .card-container {
+      justify-content: center;
+    }
+  }
+  
