--- a/src/public/css/common.css
+++ b/src/public/css/common.css
@@ -221,7 +221,7 @@ header {
     background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../img/bg-admin.jpg);
     background-size: cover;
     background-position: center;
-    height: 100vh;
+    /* height: 100vh; */
     background-attachment: fixed;
 }
 
