--- a/src/public/css/admin.css
+++ b/src/public/css/admin.css
@@ -589,8 +589,8 @@ footer {
 }
 
 .social-links {
-    list-style: none;
-    float: right;
+    /* list-style: none;
+    float: right; */
 }
 
 .footer-nav li,
@@ -617,6 +617,7 @@ footer {
 .footer-nav li a:hover,
 .footer-nav li a:active {
     color: #ddd;
+    text-decoration: underline;
 }
 
 .social-links li a:link,
@@ -624,27 +625,19 @@ footer {
     font-size: 160%;
 }
 
-.ion-social-facebook,
-.ion-social-twitter,
-.ion-social-googleplus,
-.ion-social-instagram {
-    -webkit-transition-delay: 0.2s;
-    transition-delay: 0.2s;
-}
-
-.ion-social-facebook:hover {
+.fa-twitter-square:hover {
     color: #3b5998;
 }
 
-.ion-social-twitter:hover {
+.fa-google-plus-square:hover {
     color: #00aced;
 }
 
-.ion-social-googleplus:hover {
+.fa-facebook-square:hover {
     color: #dd4b39;
 }
 
-.ion-social-instagram:hover {
+.fa-instagram-square:hover {
     color: #517fa4;
 }
 
@@ -714,8 +707,9 @@ a,
 }
 
 .product-link>a {
+    color: white;
     text-decoration: none;
-    font-size: 14px;
+    font-size: 16px;
     border-bottom: none;
     font-weight: 500;
 }
@@ -723,9 +717,10 @@ a,
 .sold-count {
     font-size: 16px;
     color: white;
-    background-color: #e67e22;
+    background-color: rgba(255, 255, 255, 0.5);
+    background-color: rgba(230, 126, 34, 0.5);
     width: 30%;
-    padding: 1% 2%;
+    padding: 2% 2%;
     margin-left: 5%;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     ;
@@ -737,6 +732,12 @@ a,
 
 .best-sellers {
     color: white;
+}
+
+.center {
+    display: block;
+    margin-left: 30%;
+    margin-right: 30%;
 }
 
 
