--- a/src/public/css/footer.css
+++ b/src/public/css/footer.css
@@ -1,9 +1,8 @@
 #footer
 {
     height: var(--footer-height);
-    /* margin-top: 2000vh; */
-    margin-top: auto;
-    flex-shrink: 0;
+    position:sticky;
+    bottom: 0;
     background-color: var(--navbar-bg-color);
     color: var(--navbar-text-color);
     box-shadow: 0 2px 4px rgba(30, 107, 207, 0.15);
