--- a/src/public/css/header.css
+++ b/src/public/css/header.css
@@ -32,12 +32,15 @@ body {
 
 #navbar {
     position: fixed;
-    height: var(--navbar-height);
-    background-color: var(--navbar-bg-color);
+    /* height: var(--navbar-height); */
+    /* background-color: var(--navbar-bg-color); */
+    background-image: -webkit-gradient( linear, left top, left bottom, from(rgba(0, 0, 0, 0.7)), to(rgba(0, 0, 0, 0.7))), url(../img/bg-admin.jpg);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../img/bg-admin.jpg);
+    background-color: black;
     left: 0;
     right: 0;
     box-shadow: 0 2px 4px rgba(30, 107, 207, 0.15);
-    border-radius: 0 0 18px 18px;
+    /* border-radius: 0 0 18px 18px; */
 }
 
 .navbar-container {
@@ -50,11 +53,15 @@ body {
 .navbar-item {
     margin: 0.4em;
     width: 100%;
+    margin-left: 12px;
+    margin-right: 12px;
+    font-size: 16px;
+    text-transform: uppercase;
 }
 
 a::after {
     position: absolute;
-    color: white;
+    color: white !important;
     top: 25px;
     left: 0;
     content: none;
@@ -63,17 +70,25 @@ a::after {
     height: 3px;
     background-color: rgba(255, 255, 255, 0.6);
     transition: all 0.5s;
-  }
+}
+
 .home-link,
 .navbar-link_customer {
-    color: var(--navbar-text-color);
-    transition: color 0.2s ease-in-out;
-    text-decoration: none;
-    display: flex;
-    font-weight: 400;
-    align-items: center;
-    transition: background-color 0.2s ease-in-out,
-                color 0.2s ease-in-out;
+    color: var(--navbar-text-color) !important;
+    transition: color 0.2s ease-in-out !important;
+    text-decoration: none !important;
+    display: flex !important;
+    font-weight: 400 !important;
+    align-items: center !important;
+    border-bottom: none !important;
+    transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out !important;
+}
+
+.navbar-link_customer:hover {
+    /* color: var(--navbar-bg-color); */
+    /* background-color: var(--navbar-text-color); */
+    transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out !important;
+    border-bottom: 1px solid var(--navbar-bg-color) !important;
 }
 
 .home-link:focus,
@@ -99,7 +114,7 @@ a::after {
     /* background-color: #cccccc; */
     background-size: cover;
     border-radius: 50%;
-    width: 80px;
+    max-width: 50px;
     height: 80px;
     margin-right: 0.5em;
 }
@@ -121,9 +136,7 @@ a::after {
     width: 25px;
     height: 4px;
     margin: 2px;
-    transition: background-color 0.2s ease-in-out,
-                transform 0.2s ease-in-out,
-                opacity 0.2s ease-in-out;
+    transition: background-color 0.2s ease-in-out, transform 0.2s ease-in-out, opacity 0.2s ease-in-out;
     background-color: var(--navbar-text-color);
 }
 
@@ -155,8 +168,7 @@ a::after {
     position: fixed;
     top: var(--navbar-height);
     bottom: 0;
-    transition: opacity 0.2s ease-in-out,
-                visibility 0.2s ease-in-out;
+    transition: opacity 0.2s ease-in-out, visibility 0.2s ease-in-out;
     opacity: 0;
     visibility: hidden;
     left: 0;
@@ -174,7 +186,7 @@ a::after {
     max-height: 0;
     overflow: hidden;
     position: absolute;
-    background-color: var(--navbar-bg-color);
+    /* background-color: var(--navbar-bg-color); */
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -194,7 +206,6 @@ a::after {
     .navbar-toggle {
         display: none;
     }
-    
     #navbar .navbar-menu,
     #navbar.opened .navbar-menu {
         visibility: visible;
@@ -203,7 +214,6 @@ a::after {
         display: block;
         height: 100%;
     }
-
     #navbar .navbar-links,
     #navbar.opened .navbar-links {
         margin: 0;
@@ -216,8 +226,21 @@ a::after {
         width: 100%;
         height: 100%;
     }
-
     #navbar .navbar-link:last-child {
         margin-right: 0;
     }
+}
+
+.logo {
+    height: 90px;
+    width: auto;
+    float: left;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.title {
+    display: flex;
+    align-self: center;
+    align-items: center;
 }
