feat: see requests at admin side and insert some new record to database

--- a/src/public/css/admin.css
+++ b/src/public/css/admin.css
@@ -783,6 +783,7 @@ a,
     font-family: Arial, Helvetica, sans-serif;
     border-collapse: collapse;
     width: 100%;
+    padding: 80px 30px;
 }
 
 #customers td,
