--- a/src/public/css/common.css
+++ b/src/public/css/common.css
@@ -165,18 +165,6 @@ input[type="submit"] {
     transition: background-color 0.2s, border 0.2s, color 0.2s;
 }
 
-.btn:link,
-.btn:visited,
-input[type="reset"] {
-    display: inline-block;
-    padding: 10px 30px;
-    font-weight: 300;
-    text-decoration: none;
-    border-radius: 200px;
-    -webkit-transition: background-color 0.2s, border 0.2s, color 0.2s;
-    transition: background-color 0.2s, border 0.2s, color 0.2s;
-}
-
 .btn-home {
     padding: 5vh 10vh 5vh 10vh;
     background-color: #F59E31;
@@ -195,15 +183,6 @@ input[type="submit"] {
     margin-right: 15px;
 }
 
-.btn-full:link,
-.btn-full:visited,
-input[type="reset"] {
-    background-color: #e67e22;
-    border: 1px solid #e67e22;
-    color: #fff;
-    margin-right: 15px;
-}
-
 .btn-ghost:link,
 .btn-ghost:visited {
     border: 1px solid #e67e22;
@@ -214,13 +193,6 @@ input[type="reset"] {
 .btn:hover,
 input[type="submit"]:active,
 input[type="submit"]:hover {
-    background-color: #cf6d17;
-}
-
-.btn:active,
-.btn:hover,
-input[type="reset"]:active,
-input[type="reset"]:hover {
     background-color: #cf6d17;
 }
 
@@ -642,7 +614,6 @@ cite img {
 }
 
 input[type="text"],
-input[type="password"],
 input[type="email"],
 select,
 textarea {
@@ -680,8 +651,8 @@ footer {
     clear: both;
     position: relative;
     /* height: 150px; */
-    margin-top: -150px;
-    min-height: 100px;
+    /* margin-top: -150px;
+    min-height: 100px; */
 }
 
 
@@ -994,6 +965,10 @@ input[type="submit"]:hover {
     margin-right: 15px;
 }
 
+.mr-5 {
+    margin-right: 5px;
+}
+
 .mt-15 {
     margin-top: 15px;
 }
@@ -1003,7 +978,7 @@ input[type="submit"]:hover {
 }
 
 .p-base {
-    padding: 15px 32px 15px 32px;
+    padding: 32px 80px;
 }
 
 .plr-15 {
