--- a/src/public/css/common.css
+++ b/src/public/css/common.css
@@ -155,7 +155,9 @@ a:hover {
 
 .btn:link,
 .btn:visited,
-input[type="submit"] {
+input[type="submit"],
+input[type="reset"] {
+    
     display: inline-block;
     padding: 10px 30px;
     font-weight: 300;
@@ -176,7 +178,9 @@ input[type="submit"] {
 
 .btn-full:link,
 .btn-full:visited,
-input[type="submit"] {
+input[type="submit"],
+input[type="reset"] {
+    
     background-color: #e67e22;
     border: 1px solid #e67e22;
     color: #fff;
@@ -192,7 +196,9 @@ input[type="submit"] {
 .btn:active,
 .btn:hover,
 input[type="submit"]:active,
-input[type="submit"]:hover {
+input[type="submit"]:hover,
+input[type="reset"]:active,
+input[type="reset"]:hover {
     background-color: #cf6d17;
 }
 
@@ -615,6 +621,7 @@ cite img {
 
 input[type="text"],
 input[type="email"],
+input[type="password"],
 select,
 textarea {
     width: 100%;
@@ -832,7 +839,8 @@ footer p {
 
 .btn:link,
 .btn:visited,
-input[type="submit"] {
+input[type="submit"],
+input[type="reset"] {
     display: inline-block;
     padding: 10px 30px;
     font-weight: 300;
@@ -844,7 +852,9 @@ input[type="submit"] {
 
 .btn-full:link,
 .btn-full:visited,
-input[type="submit"] {
+input[type="submit"],
+input[type="reset"] {
+    
     background-color: #e67e22;
     border: 1px solid #e67e22;
     color: #fff;
@@ -860,7 +870,9 @@ input[type="submit"] {
 .btn:active,
 .btn:hover,
 input[type="submit"]:active,
-input[type="submit"]:hover {
+input[type="submit"]:hover,
+input[type="reset"]:active,
+input[type="reset"]:hover {
     background-color: #cf6d17;
 }
 
