--- a/src/public/css/common.css
+++ b/src/public/css/common.css
@@ -157,7 +157,6 @@ a:hover {
 .btn:visited,
 input[type="submit"],
 input[type="reset"] {
-    
     display: inline-block;
     padding: 10px 30px;
     font-weight: 300;
@@ -172,7 +171,7 @@ input[type="reset"] {
 input[type="reset"] {
     display: inline-block;
     padding: 10px 30px;
-    font-weight: 300;
+    font-weight: 500;
     text-decoration: none;
     border-radius: 200px;
     -webkit-transition: background-color 0.2s, border 0.2s, color 0.2s;
@@ -188,11 +187,22 @@ input[type="reset"] {
     font-size: 1em;
 }
 
+.btn-secondary {
+    background-color: white !important;
+    border: 1px solid #e67e22 !important;
+    color: #e67e22 !important;
+    font-weight: 500;
+}
+
+.btn-secondary:hover {
+    background-color: rgb(241, 132, 29) !important;
+    color: white !important;
+}
+
 .btn-full:link,
 .btn-full:visited,
 input[type="submit"],
 input[type="reset"] {
-    
     background-color: #e67e22;
     border: 1px solid #e67e22;
     color: #fff;
@@ -665,6 +675,9 @@ textarea {
 
 input[type="checkbox"] {
     margin: 10px 5px 10px 0;
+    height: 20px !important;
+    width: 20px !important;
+    background: #e67e22 !important;
 }
 
 *:focus {
@@ -861,59 +874,6 @@ footer p {
     line-height: 120%;
     vertical-align: middle;
     margin-top: -5px;
-}
-
-
-/*----- BUTTONS -----*/
-
-.btn:link,
-.btn:visited,
-input[type="submit"],
-input[type="reset"] {
-    display: inline-block;
-    padding: 10px 30px;
-    font-weight: 300;
-    text-decoration: none;
-    border-radius: 200px;
-    -webkit-transition: background-color 0.2s, border 0.2s, color 0.2s;
-    transition: background-color 0.2s, border 0.2s, color 0.2s;
-}
-
-.btn-full:link,
-.btn-full:visited,
-input[type="submit"],
-input[type="reset"] {
-    
-    background-color: #e67e22;
-    border: 1px solid #e67e22;
-    color: #fff;
-    margin-right: 15px;
-}
-
-.btn-ghost:link,
-.btn-ghost:visited {
-    border: 1px solid #e67e22;
-    color: #e67e22;
-}
-
-.btn:active,
-.btn:hover,
-input[type="submit"]:active,
-input[type="submit"]:hover,
-input[type="reset"]:active,
-input[type="reset"]:hover {
-    background-color: #cf6d17;
-}
-
-.btn-full:hover,
-.btn-full:active {
-    border: 1px solid #cf6d17;
-}
-
-.btn-ghost:hover,
-.btn-ghost:active {
-    border: 1px solid #cf6d17;
-    color: #fff;
 }
 
 
