--- a/src/public/css/common.css
+++ b/src/public/css/common.css
@@ -207,15 +207,14 @@ input[type="reset"] {
     border: 1px solid #e67e22;
     color: #fff;
     margin-right: 15px;
+    font-size: 15px;
+    font-weight: 500;
+    width: 120px;
 }
 
-.btn-full:link,
-.btn-full:visited,
-input[type="reset"] {
-    background-color: #e67e22;
-    border: 1px solid #e67e22;
-    color: #fff;
-    margin-right: 15px;
+input[type="number"] {
+    height: 30px;
+    font-size: 14px;
 }
 
 .btn-ghost:link,
@@ -228,13 +227,6 @@ input[type="reset"] {
 .btn:hover,
 input[type="submit"]:active,
 input[type="submit"]:hover,
-input[type="reset"]:active,
-input[type="reset"]:hover {
-    background-color: #cf6d17;
-}
-
-.btn:active,
-.btn:hover,
 input[type="reset"]:active,
 input[type="reset"]:hover {
     background-color: #cf6d17;
@@ -667,6 +659,8 @@ textarea {
     padding: 7px;
     border-radius: 3px;
     border: 1px solid #ccc;
+    height: 40px;
+    margin-bottom: 15px;
 }
 
 textarea {
@@ -989,4 +983,61 @@ footer p {
 
 .shadow-box {
     box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.25);
+}
+
+
+/* LOGIN FORM */
+
+.body-container {
+    margin-top: 20vh;
+    display: block;
+    position: relative;
+    margin-bottom: 5%;
+    min-height: 70vh;
+    text-align: center;
+}
+
+.bg-blur {
+    color: white;
+    background-image: -webkit-gradient( linear, left top, left bottom, from(rgba(0, 0, 0, 0.7)), to(rgba(0, 0, 0, 0.7))), url(../img/bg-admin.jpg);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../img/bg-admin.jpg);
+}
+
+.round-border {
+    border-radius: 8px;
+}
+
+
+/* TABLE */
+
+#customers {
+    font-family: Arial, Helvetica, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+    padding: 80px 30px;
+}
+
+#customers td,
+#customers th {
+    border: 1px solid #ddd;
+    padding: 8px;
+    /* background-color: #ddd;
+    color: black; */
+}
+
+
+/* #customers tr:nth-child(even){background-color: #f2f2f2 ;
+     color: black;} */
+
+#customers tr:hover {
+    background-color: #e67e22 !important;
+    color: white !important;
+}
+
+#customers th {
+    padding-top: 12px;
+    padding-bottom: 12px;
+    text-align: left;
+    background-color: #e67e22;
+    color: white;
 }
