--- a/src/public/css/searchbar.css
+++ b/src/public/css/searchbar.css
@@ -1,87 +1,85 @@
-a {
-    color: #69C;
-    text-decoration: none;
-  }
-  a:hover {
-    color: #F60;
-  }
-  h1 {
-    font: 1.7em;
-    line-height: 110%;
-    color: #000;
-  }
-  p {
-    margin: 0 0 20px;
-  }
+.search-container {
+  display: flex;
+  flex-direction: column;
+  align-self: flex-start;
+  top: 50%;
+}
+
+.search-input {
+  background: #ededed url(https://static.tumblr.com/ftv85bp/MIXmud4tx/search-icon.png) no-repeat 9px center;
+  border: solid 1px #ccc;
+
+  padding: 5px 10px 5px 10px;
+  width: 15px;
+  height: 25px;
+
+  -webkit-border-radius: 10em;
+  -moz-border-radius: 10em;
+  border-radius: 10em;
+
+  color: transparent;
+  cursor: pointer;
+
+  -webkit-appearance: textfield;
+  -webkit-box-sizing: content-box;
+  box-sizing: content-box;
+  font-family: inherit;
+  font-size: 100%;
+
+  -webkit-transition: all .5s;
+  -moz-transition: all .5s;
+  transition: all .5s;
+
+  margin-top: 20px;
+}
+
+.search-input:focus {
+  color: #000;
+  background-color: #fff;
+  border-color: #66CC75;
   
-  
-  input {
-    outline: none;
-  }
-  input[type=search] {
-    -webkit-appearance: textfield;
-    -webkit-box-sizing: content-box;
-    font-family: inherit;
-    font-size: 100%;
-  }
-  input::-webkit-search-decoration,
-  input::-webkit-search-cancel-button {
-    display: none; 
-  }
-  
-  
-  input[type=search] {
-    background: #ededed url(https://static.tumblr.com/ftv85bp/MIXmud4tx/search-icon.png) no-repeat 9px center;
-    border: solid 1px #ccc;
-    padding: 5px 10px 5px 32px;
-    width: 55px;
-    
-    -webkit-border-radius: 10em;
-    -moz-border-radius: 10em;
-    border-radius: 10em;
-    
-    -webkit-transition: all .5s;
-    -moz-transition: all .5s;
-    transition: all .5s;
-  }
-  input[type=search]:focus {
-    width: 130px;
-    background-color: #fff;
-    border-color: #66CC75;
-    
-    -webkit-box-shadow: 0 0 5px rgba(109,207,246,.5);
-    -moz-box-shadow: 0 0 5px rgba(109,207,246,.5);
-    box-shadow: 0 0 5px rgba(109,207,246,.5);
-  }
-  
-  
-  input:-moz-placeholder {
-    color: #999;
-  }
-  input::-webkit-input-placeholder {
-    color: #999;
-  }
-  
-  /* Demo 2 */
-  #demo-2 input[type=search] {
-    width: 15px;
-    padding-left: 10px;
-    color: transparent;
-    cursor: pointer;
-  }
-  #demo-2 input[type=search]:hover {
-    background-color: #fff;
-  }
-  #demo-2 input[type=search]:focus {
-    width: 130px;
-    padding-left: 32px;
-    color: #000;
-    background-color: #fff;
-    cursor: auto;
-  }
-  #demo-2 input:-moz-placeholder {
-    color: transparent;
-  }
-  #demo-2 input::-webkit-input-placeholder {
-    color: transparent;
-  }
+  width: 300px;
+  padding-left: 32px;
+
+  cursor: auto;
+
+  -webkit-box-shadow: 0 0 5px rgba(109, 207, 246, .5);
+  -moz-box-shadow: 0 0 5px rgba(109, 207, 246, .5);
+  box-shadow: 0 0 5px 0 rgba(109, 207, 246, .5);
+
+  border-bottom-left-radius: 0em;
+  border-bottom-right-radius: 0em;
+}
+
+.search-input:hover {
+  background-color: #fff;
+}
+
+.search-input:-moz-placeholder {
+  color: #999;
+  color: transparent;
+}
+
+.search-input::-webkit-input-placeholder {
+  color: #999;
+  color: transparent;
+}
+
+.search-result-container {
+  display: none;
+  visibility: hidden;
+
+  background-color: #fff;
+
+  padding-left: 32px;
+}
+
+.search-input:focus + .search-result-container {
+  display: initial;
+  visibility: inherit;
+  width: 300px;
+}
+
+.search-result-container > a {
+  text-overflow: ellipsis;
+}
