--- a/src/public/css/searchbar.css
+++ b/src/public/css/searchbar.css
@@ -1,85 +1,109 @@
-.search-container {
-  display: flex;
-  flex-direction: column;
+.instant-search {
   align-self: flex-start;
-  top: 50%;
+  width: 20vw;
+  margin-top: 5%;
 }
 
-.search-input {
-  background: #ededed url(https://static.tumblr.com/ftv85bp/MIXmud4tx/search-icon.png) no-repeat 9px center;
-  border: solid 1px #ccc;
-
-  padding: 5px 10px 5px 10px;
-  width: 15px;
-  height: 25px;
-
-  -webkit-border-radius: 10em;
-  -moz-border-radius: 10em;
-  border-radius: 10em;
-
-  color: transparent;
-  cursor: pointer;
-
-  -webkit-appearance: textfield;
-  -webkit-box-sizing: content-box;
-  box-sizing: content-box;
-  font-family: inherit;
-  font-size: 100%;
-
-  -webkit-transition: all .5s;
-  -moz-transition: all .5s;
-  transition: all .5s;
-
-  margin-top: 20px;
+.instant-search,
+.instant-search__input {
+  font-family: sans-serif;
 }
 
-.search-input:focus {
-  color: #000;
-  background-color: #fff;
-  border-color: #66CC75;
-  
-  width: 300px;
-  padding-left: 32px;
-
-  cursor: auto;
-
-  -webkit-box-shadow: 0 0 5px rgba(109, 207, 246, .5);
-  -moz-box-shadow: 0 0 5px rgba(109, 207, 246, .5);
-  box-shadow: 0 0 5px 0 rgba(109, 207, 246, .5);
-
-  border-bottom-left-radius: 0em;
-  border-bottom-right-radius: 0em;
+.instant-search,
+.instant-search * {
+  transition: background 0.15s, box-shadow 0.15s;
 }
 
-.search-input:hover {
-  background-color: #fff;
+.instant-search:focus-within {
+  box-shadow: 0 0 3px rgba(0, 0, 0, 0.2);
 }
 
-.search-input:-moz-placeholder {
-  color: #999;
-  color: transparent;
+.instant-search--loading::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 2px;
+  background: #009578;
+  border-radius: 5px;
+  animation: searchIndicator 0.5s infinite ease-in-out;
 }
 
-.search-input::-webkit-input-placeholder {
-  color: #999;
-  color: transparent;
+@keyframes searchIndicator {
+  0% {
+    width: 15%;
+  }
+  50% {
+    width: 100%;
+  }
+  100% {
+    width: 15%;
+  }
 }
 
-.search-result-container {
-  display: none;
+.instant-search,
+.instant-search__input-container {
+  border-radius: 5px;
+}
+
+.instant-search__input-container {
+  display: inline-flex;
+  box-sizing: border-box;
+  width: 100%;
+  padding: 6px;
+  background: #eeeeee;
+}
+
+.instant-search__input-container:focus-within {
+  background: #ffffff;
+}
+
+.instant-search__input {
+  flex-grow: 1;
+  border: none;
+  outline: none;
+  width: 100%;
+  padding: 0 6px;
+  background: transparent;
+}
+
+.instant-search__results-container {
+  max-height: 250px;
+  overflow-y: auto;
   visibility: hidden;
-
-  background-color: #fff;
-
-  padding-left: 32px;
+  background-color: #eeeeee;
+  opacity: 0;
+  transition: visibility 0.1s, opacity 0.1s;
 }
 
-.search-input:focus + .search-result-container {
-  display: initial;
-  visibility: inherit;
-  width: 300px;
+.instant-search__results-container--visible {
+  visibility: visible;
+  opacity: 1;
 }
 
-.search-result-container > a {
-  text-overflow: ellipsis;
+.instant-search__result {
+  display: block;
+  color: #333333;
+  text-decoration: none;
+  padding: 10px;
+  font-size: 0.8em;
+  cursor: pointer;
+}
+
+.instant-search__result:hover {
+  background: #ddddff;
+}
+
+.instant-search__result:not(:last-of-type) {
+  border-bottom: 1px solid #eeeeee;
+}
+
+.instant-search__title {
+  font-size: 1.1em;
+  font-weight: bold;
+}
+
+.instant-search__paragraph {
+  line-height: 1.5;
+  margin: 8px 0;
 }
